--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Escola  Luiz Sebastião Baldo, C E-EF M turmas 2ºD e 2ºE</title>
+    <title>Boné.Com</title>
 </head>
 <body>
     <header class="cabecalho">
         <div class="container">
             <img class="container__imagem" src="img/logoBaldo.svg.svg" width="320" height="205" alt="Logotipo">
             <h1 class="container__titulo">
-                Baldo Digital <b class="container__titulo--negrito">Turmas 2ºD e 2ºE</b>
+                 <b class="container__titulo--negrito">BONÉ.COM</b>
             </h1>
             <p class="container__frase">
-                "Aqui, cada código é um <i>start</i>" para um novo conhecimento!""
+                "Aqui nós temos a cura da calvíce!""
             </p>
         </div>
     </header>
